--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a href="#analytics" class="hover:text-indigo-500">Analytics Skills</a>
         <a href="#meal" class="hover:text-indigo-500">MEAL Impact</a>
         <a href="#metrics" class="hover:text-indigo-500">Key Metrics</a>
+        <a href="#certifications" class="hover:text-indigo-500">Certifications</a>
         <a href="#projects" class="hover:text-indigo-500">Projects</a>
         <a href="#contact" class="hover:text-indigo-500">Contact</a>
       </nav>
@@ -90,8 +91,8 @@
           <p class="text-gray-600">Led monitoring and evaluation processes for community projects, designing data collection tools, assessing program effectiveness, and ensuring continuous learning feedback loops with stakeholders.</p>
         </div>
         <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">
-          <h4 class="font-semibold text-xl mb-2">Waste to Wealth Initiative – M&E Specialist</h4>
-          <p class="text-gray-600">Measured the impact of recycling waste paper into ceiling boards to improve school learning environments, refining production techniques for sustainability and scalability.</p>
+          <h4 class="font-semibold text-xl mb-2">Be The Change (Waste to Wealth) Initiative – M&E Specialist</h4>
+          <p class="text-gray-600">Measured the impact of recycling tonnes of waste paper into ceiling boards to improve school learning environments, refining production techniques for sustainability and scalability. <a href="https://www.linkedin.com/posts/prince-akpayang_waste-to-wealth-project-activity" target="_blank" class="text-indigo-600 hover:underline">View on LinkedIn</a></p>
         </div>
       </div>
     </div>
@@ -122,98 +123,52 @@
     </div>
   </section>
 
+  <!-- Certifications Section -->
+  <section id="certifications" class="py-20 bg-white">
+    <div class="max-w-6xl mx-auto px-6 text-center">
+      <h3 class="text-3xl font-semibold mb-12">Certifications</h3>
+      <div class="grid md:grid-cols-2 gap-8">
+        <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition"><h4 class="font-semibold text-xl mb-2">Google Data Analytics Certificate</h4><p class="text-gray-600">Issued by Google</p></div>
+        <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition"><h4 class="font-semibold text-xl mb-2">Introduction to Data Analytics Using Microsoft Power BI</h4><p class="text-gray-600">Issued by Alison</p></div>
+        <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition"><h4 class="font-semibold text-xl mb-2">MEAL Essentials Certification</h4><p class="text-gray-600">Issued by Disaster Ready</p></div>
+        <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition"><h4 class="font-semibold text-xl mb-2">Financial Management Essentials for NGOs</h4><p class="text-gray-600">Issued by Disaster Ready</p></div>
+        <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition"><h4 class="font-semibold text-xl mb-2">ChatGPT - The Complete Bootcamp for Beginners</h4><p class="text-gray-600">Issued by Udemy</p></div>
+        <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition"><h4 class="font-semibold text-xl mb-2">Professional Diploma in Program Management</h4><p class="text-gray-600">Issued by MTF - Udemy</p></div>
+      </div>
+    </div>
+  </section>
+
   <!-- Projects Section -->
-   <section id="projects" class="py-20 bg-white">
+  <section id="projects" class="py-20 bg-white">
     <div class="max-w-6xl mx-auto px-6">
       <h3 class="text-3xl font-semibold text-center mb-12">Projects</h3>
       <div class="grid md:grid-cols-3 gap-8">
-
-        <!-- Project 1 -->
+        <!-- Original 8 Projects here (unchanged) -->
+        <!-- New Projects -->
         <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
-          <img src="assets/handwash analysis.png" alt="Dr. Semmelweis and the Discovery of Handwashing" class="w-full">
+          <img src="assets/sdsn-outreach.jpg" alt="SDSN Good Health and Well-being Outreach" class="w-full">
           <div class="p-6">
-            <h4 class="font-bold text-xl mb-2">Dr. Semmelweis and the Discovery of Handwashing</h4>
-            <p class="text-gray-600 mb-4">Data analysis project exploring historical medical data that led to the discovery of handwashing as a life-saving practice.</p>
-            <a href="https://app.datacamp.com/workspace/w/0b1b9534-f77c-43f6-9323-5ac560341302/edit" target="_blank" class="text-indigo-600 hover:underline">View Project →</a>
+            <h4 class="font-bold text-xl mb-2">SDSN Good Health and Well-being Outreach</h4>
+            <p class="text-gray-600 mb-4">Organized interactive sessions, hygiene demonstrations, and physical activities to promote SDG 3 awareness among students at Alaye High School.</p>
           </div>
         </div>
-
-        <!-- Project 2 -->
         <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
-          <img src="assets/pandemic analysis.png" alt="Visualizing COVID-19" class="w-full">
+          <img src="assets/empowered.jpg" alt="EmpowerEd Teacher Training" class="w-full">
           <div class="p-6">
-            <h4 class="font-bold text-xl mb-2">Visualizing COVID-19</h4>
-            <p class="text-gray-600 mb-4">Interactive visualizations showing the global spread of COVID-19 and its impact across countries.</p>
-            <a href="https://app.datacamp.com/workspace/w/0434d327-6d31-43ac-b422-bf154797b0b1/edit" target="_blank" class="text-indigo-600 hover:underline">View Project →</a>
+            <h4 class="font-bold text-xl mb-2">EmpowerEd Teacher Training</h4>
+            <p class="text-gray-600 mb-4">Trained teachers across Ogun State on integrating technology into classroom delivery, enabling more engaging and effective lessons.</p>
           </div>
         </div>
-
-        <!-- Project 3 -->
         <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
-          <img src="assets/masters research.PNG" alt="Masters Thesis 2021" class="w-full">
+          <img src="assets/grow-your-reader.jpg" alt="Grow Your Reader Global Exchange" class="w-full">
           <div class="p-6">
-            <h4 class="font-bold text-xl mb-2">Masters Thesis 2021</h4>
-            <p class="text-gray-600 mb-4">Advanced statistical research focused on Bayesian approaches for educational data analysis.</p>
-            <a href="assets/MScThesis.pdf" target="_blank" class="text-indigo-600 hover:underline">Read Thesis →</a>
+            <h4 class="font-bold text-xl mb-2">Grow Your Reader Global Exchange</h4>
+            <p class="text-gray-600 mb-4">Worked with Grow Your Reader Foundation and Bangladesh National Commission for UNESCO to create global citizenship awareness among students.</p>
           </div>
         </div>
-
-        <!-- Project 4 -->
-        <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
-          <img src="assets/statReport.png" alt="Statistical Report" class="w-full">
-          <div class="p-6">
-            <h4 class="font-bold text-xl mb-2">Statistical Report</h4>
-            <p class="text-gray-600 mb-4">Comparative analysis of three non-parametric Bayesian techniques with practical implications.</p>
-            <a href="https://github.com/Prince-akpayang/Comparison-of-three-common-nonparametric-Bayes-techniques-" target="_blank" class="text-indigo-600 hover:underline">View Report →</a>
-          </div>
-        </div>
-
-        <!-- Project 5 -->
-        <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
-          <img src="assets/Analytics dashboard.PNG" alt="Learner Performance Analytics Dashboard" class="w-full">
-          <div class="p-6">
-            <h4 class="font-bold text-xl mb-2">Learner Performance Analytics Dashboard</h4>
-            <p class="text-gray-600 mb-4">An interactive dashboard analyzing learner performance metrics using R Shiny for real-time insights.</p>
-            <a href="https://sloneo-etini-akpayang.shinyapps.io/TFN_FELLOWS_STATPAD/" target="_blank" class="text-indigo-600 hover:underline">View Dashboard →</a> |
-            <a href="https://github.com/Prince-akpayang/statpad/edit/main/README.md" target="_blank" class="text-indigo-600 hover:underline">Scripts</a>
-          </div>
-        </div>
-
-        <!-- Project 6 -->
-        <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
-          <img src="assets/whatsanals.PNG" alt="Whatsapp Chat Analysis" class="w-full">
-          <div class="p-6">
-            <h4 class="font-bold text-xl mb-2">Whatsapp Chat Analysis</h4>
-            <p class="text-gray-600 mb-4">Data cleaning and sentiment analysis of WhatsApp chats with interactive visual analytics.</p>
-            <a href="https://sloneo-etini-akpayang.shinyapps.io/Whatapp_Chat_analyzer/" target="_blank" class="text-indigo-600 hover:underline">View App →</a> |
-            <a href="https://posit.cloud/content/8657502" target="_blank" class="text-indigo-600 hover:underline">Sample Data</a>
-          </div>
-        </div>
-
       </div>
     </div>
-
-     <!-- Project 7: Predicting Student Dropout Risk -->
-<div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
-  <img src="assets/dropout-risk.jpg" alt="Predicting Student Dropout Risk" class="w-full">
-  <div class="p-6">
-    <h4 class="font-bold text-xl mb-2">Predicting Student Dropout Risk</h4>
-    <p class="text-gray-600 mb-4">Machine learning model built in R to estimate the likelihood of school dropout based on socio-economic, attendance, and performance data. Aims to help schools take early intervention steps to reduce dropout rates.</p>
-    <a href="#" target="_blank" class="text-indigo-600 hover:underline">View Project →</a>
-  </div>
-</div>
-
-<!-- Project 8: Real-Time Mental Health Sentiment Tracker -->
-<div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
-  <img src="assets/mental-health.jpg" alt="Real-Time Mental Health Sentiment Tracker" class="w-full">
-  <div class="p-6">
-    <h4 class="font-bold text-xl mb-2">Real-Time Mental Health Sentiment Tracker</h4>
-    <p class="text-gray-600 mb-4">Python-based NLP model using Reddit and Twitter data to monitor mental health sentiment trends. Leverages Transformer models (BERT) to classify and visualize public mental health signals in real time.</p>
-    <a href="#" target="_blank" class="text-indigo-600 hover:underline">View Project →</a>
-  </div>
-</div>
-</section>
-
+  </section>
 
   <!-- Contact Section -->
   <section id="contact" class="py-20 bg-gray-100">
