--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
       </div>
 
       <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
-        <img src="assets/palm-oil.jpg" alt="Palm Oil Profitability Analysis" class="w-full">
+        <img src="assets/palm-oil.jpeg" alt="Palm Oil Profitability Analysis" class="w-full">
         <div class="p-6">
           <h4 class="font-bold text-xl mb-2">Palm Oil Investment Profitability Model</h4>
           <p class="text-gray-600 mb-4">End-to-end feasibility model estimating profitability, ROI, and scale requirements across Nigerian states.</p>
@@ -298,7 +298,7 @@
       </div>
 
       <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
-        <img src="assets/product-analytics.jpg" alt="Product Analytics" class="w-full">
+        <img src="assets/product-analytics.jpeg" alt="Product Analytics" class="w-full">
         <div class="p-6">
           <h4 class="font-bold text-xl mb-2">Product User Segmentation Analysis</h4>
           <p class="text-gray-600 mb-4">Data-driven user clustering to support targeted outreach and lookalike audience creation.</p>
@@ -307,7 +307,7 @@
       </div>
 
       <div class="bg-gray-100 shadow-md rounded-lg overflow-hidden hover:shadow-xl transition">
-        <img src="assets/ambiguous-data.jpg" alt="Ambiguous Data Analysis" class="w-full">
+        <img src="assets/ambiguous-data.jpeg" alt="Ambiguous Data Analysis" class="w-full">
         <div class="p-6">
           <h4 class="font-bold text-xl mb-2">Interpreting Ambiguous Time Series Data</h4>
           <p class="text-gray-600 mb-4">Advanced reasoning under uncertainty to construct and challenge competing data narratives.</p>
