--- a/index.html
+++ b/index.html
@@ -321,7 +321,8 @@
           <div class="p-6">
             <h4 class="font-bold text-xl mb-2">Predicting Student Dropout Risk</h4>
             <p class="text-gray-600 mb-4">Machine learning model built in R to estimate the likelihood of school dropout based on socio-economic, attendance, and performance data. Aims to help schools take early intervention steps to reduce dropout rates.</p>
-            <a href="https://sloneo-etini-akpayang.shinyapps.io/Student_Dropout_Risk_Predictor/" target="_blank" class="text-indigo-600 hover:underline">View Project →</a>
+            <a href="https://sloneo-etini-akpayang.shinyapps.io/Student_Dropout_Risk_Predictor/" target="_blank" class="text-indigo-600 hover:underline">View ShinyApp →</a>
+            <a href="https://github.com/Prince-akpayang/Student-dropout-risk-prediction" target="_blank" class="text-indigo-600 hover:underline">View Project codes →</a>
           </div>
         </div>
         
